--- a/ReforestacionComunitaria/Web.config
+++ b/ReforestacionComunitaria/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<add name="ConexionCatalogo" connectionString="Data Source=.;Initial Catalog=ReforestacionesDB;Integrated Security=True" />
+	</connectionStrings>
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
